Atualização do Header

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Hero Universe</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar">
+            <span class="text-logo">
+                <a href="index.html">Hero Universe</a> 
+            </span>
+            <ul>
+                <li>
+                    <a href="#" class="a-animation">Objetivo</a>
+                </li>
+                <li>
+                    <a href="#" class="a-animation">Noticias</a>
+                </li>
+                <li>
+                    <a href="#" class="a-animation">Sobre</a>
+                </li>
+                <li>
+                    <a href="#" class="a-animation">Portifolio</a>
+                </li>
+                <li>
+                    <a href="#" class="a-animation">Cadastro</a>
+                </li>
+                <li>
+                    <a href="#" class="a-animation">Login</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
