Atualização do site e inserção de imagens

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,33 +8,51 @@
     <link rel="stylesheet" href="./style/style.css">
     <title>Hero Universe</title>
 </head>
+
 <body>
-    <header>
-        <nav class="navbar">
-            <span class="text-logo">
-                <a href="index.html">Hero Universe</a> 
+    <div class="div-opacity">
+        <header>
+            <nav class="navbar">
+                <ul>
+                    <li>
+                        <a href="#main-objetivo" class="nav-link navbar-animation">
+                            Objetivo
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#main-sobre" class="nav-link navbar-animation">
+                            Sobre
+                        </a>
+                    </li>
+                </ul>
+                <img class="nav-link logo" src="../public/assets/img/icons/logo.svg.svg" srcset="">
+                <ul>
+                    <li>
+                        <a href="cadastro.html" class="nav-link navbar-animation">
+                            Cadastro
+                        </a>
+                    </li>
+                    <li>
+                        <a href="login.html" class="nav-link navbar-animation">
+                            Login
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section id="main-index">
+            <div class="main-index">
+                <a href="">Objetivo</a>
+            </div>
+        </section>
+        <section class="main-objetivo">
+            <span>
+                <a class="title-logo">
+                    Objetivo
+                </a>
             </span>
-            <ul>
-                <li>
-                    <a href="#" class="a-animation">Objetivo</a>
-                </li>
-                <li>
-                    <a href="#" class="a-animation">Noticias</a>
-                </li>
-                <li>
-                    <a href="#" class="a-animation">Sobre</a>
-                </li>
-                <li>
-                    <a href="#" class="a-animation">Portifolio</a>
-                </li>
-                <li>
-                    <a href="#" class="a-animation">Cadastro</a>
-                </li>
-                <li>
-                    <a href="#" class="a-animation">Login</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+        </section>
+    </div>
 </body>
+
 </html>
