Fazendo alterações e adições na home da landing page

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -10,48 +10,39 @@
 </head>
 
 <body>
+    <header>
+        <nav id="navbar">
+            <span id="logo">Hero Universe</span>
+            <ul>
+                <li><a href="#main-objetivo" class="nav-link link-animation">Objetivo</a></li>
+                <li><a href="#" class="nav-link link-animation">Noticias</a></li>
+                <li><a href="#main-sobre" class="nav-link link-animation">Sobre</a></li>
+                <li><a href="#main-sobre" class="nav-link link-animation">Portifolio</a></li>
+                <li><a href="cadastro.html" class="nav-link link-animation">Cadastro</a></li>
+                <li><a href="login.html" class="nav-link link-animation">Login</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="vinheta-video">
+        <video src="./assets/img/backgrounds/Marvel-Intro.mp4" autoplay muted loop></video>
+    </div>
     <div class="div-opacity">
-        <header>
-            <nav class="navbar">
-                <ul>
-                    <li>
-                        <a href="#main-objetivo" class="nav-link navbar-animation">
-                            Objetivo
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#main-sobre" class="nav-link navbar-animation">
-                            Sobre
-                        </a>
-                    </li>
-                </ul>
-                <img class="nav-link logo" src="../public/assets/img/icons/logo.svg.svg" srcset="">
-                <ul>
-                    <li>
-                        <a href="cadastro.html" class="nav-link navbar-animation">
-                            Cadastro
-                        </a>
-                    </li>
-                    <li>
-                        <a href="login.html" class="nav-link navbar-animation">
-                            Login
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
         <section id="main-index">
             <div class="main-index">
-                <a href="">Objetivo</a>
+                <div class="teia index">
+                    <img src="./assets/img/icons/teia.svg" alt="" srcset="">
+                </div>
             </div>
         </section>
-        <section class="main-objetivo">
-            <span>
-                <a class="title-logo">
-                    Objetivo
-                </a>
-            </span>
-        </section>
+        <main>
+            <section class="main-objetivo">
+                <span>
+                    <a class="title-logo">
+                        Objetivo
+                    </a>
+                </span>
+            </section>
+        </main>
     </div>
 </body>
 
