--- a/site/public/index.html
+++ b/site/public/index.html
@@ -24,8 +24,20 @@
         </nav>
     </header>
     <div class="vinheta-video">
-        <video src="./assets/img/backgrounds/Marvel-Intro.mp4" autoplay muted loop></video>
+        <video autoplay loop muted class="bg_video">
+            <source src="./assets/img/backgrounds/Marvel-Intro.mp4" type="video/mp4">
+            <div class="teia index">
+                <img src="./assets/img/icons/teia.svg" alt="" srcset="">
+            </div>
+        </video>
+        <span class="texto-index">
+            <a>
+                Bem-vindo ao Hero Universe.<br>
+                Fique sabendo tudo sobre o Universo da Marvel, desde os quadrinhos aos filmes da MCU.
+            </a>
+        </span>
     </div>
+    
     <div class="div-opacity">
         <section id="main-index">
             <div class="main-index">
