Fazendo a integração com o BD para o cadastro de usuario

--- a/public/personagem.html
+++ b/public/personagem.html
@@ -9,7 +9,7 @@
     <script src="./script/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
 
-    <title>Hero Universe</title>
+    <title>Quiz Sobre Personagem</title>
 </head>
 
 <body>
@@ -21,7 +21,6 @@
                 <li><a href="#" class="nav-link link-animation">Noticias</a></li>
                 <li><a href="#main-sobre" class="nav-link link-animation">Sobre</a></li>
                 <li><a href="#main-sobre" class="nav-link link-animation">Portifolio</a></li>
-                <li><a href="cadastro.html" class="nav-link link-animation">Cadastro</a></li>
                 <li><a href="login.html" class="nav-link link-animation">Login</a></li>
             </ul>
         </nav>
