--- a/public/index.html
+++ b/public/index.html
@@ -48,11 +48,11 @@
         </section>
         <main>
             <section class="main-objetivo">
-                <span>
-                    <a class="title-logo">
-                        Objetivo
-                    </a>
-                </span>
+                <div class="main-index">
+                    <div class="teia index">
+                        <img src="./assets/img/icons/teia.svg" alt="" srcset="">
+                    </div>
+                </div>
             </section>
         </main>
     </div>
