Novas telas como Cadastro e login, atualização do css

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
             </a>
         </span>
     </div>
-    
+
     <div class="div-opacity">
         <section id="main-index">
             <div class="main-index">
@@ -48,10 +48,13 @@
         </section>
         <main>
             <section class="main-objetivo">
-                <div class="main-index">
-                    <div class="teia index">
-                        <img src="./assets/img/icons/teia.svg" alt="" srcset="">
-                    </div>
+                <div class="teia index">
+                    <img src="./assets/img/icons/teia.svg" alt="" srcset="">
+                </div>
+            </section>
+            <section class="main-sobre">
+                <div class="teia index">
+                    <img src="./assets/img/icons/teia.svg" alt="" srcset="">
                 </div>
             </section>
         </main>
