--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -26,16 +26,33 @@
             <span class="texto Cadastro">
                 faça aqui o seu cadastro para poder fazer o quiz sobre os personagens da MARVEL.
             </span>
-            <div class="containerInputs">
-                <label for="Nome">
+            <div class="form">
+                <label for="inp_nome">
                     Nome:
-                    <input name="Nome" placeholder="Nome" type="text" id="inputNome">
+                    <input type="text" id="inp_nome" placeholder="Tony">
                 </label>
-                <label for="Sobrenome">
-                    Sobrenome:
-                    <input name="Sobrenome" placeholder="Sobrenome" type="text" id="inputSobrenome">
+                <div class="flex">
+                    <label for="inp_username">
+                        Username:
+                        <input type="text" id="inp_username" placeholder="username">
+                    </label>
+                </div>
+                <label for="inp_email">
+                    Email:
+                    <input type="text" id="inp_email" placeholder="email@latech.com">
                 </label>
-                <label for=""></label>
+                <label for="inp_senha">
+                    Senha:
+                    <input type="password" id="inp_senha" placeholder="********">
+                </label>
+                <label for="inp_confiSenha">
+                    Confirme sua senha:
+                    <input type="password" id="inp_confiSenha" placeholder="********">
+                </label>
+                <button class="btn" onclick="cadastrar()"> Cadastrar</button>
+                <div id="div_aguardar" class="loading-div">
+                </div>
+                <div id="div_erros_login"></div>
             </div>
         </div>
     </div>
