Cadastro e Login de usuario funcionando e colocando personagem favorito

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -28,6 +28,7 @@
             <span class="texto Cadastro">
                 faça aqui o seu cadastro para poder fazer o quiz sobre os personagens da MARVEL.
             </span>
+            <div id="mensagem_erro"></div>
             <div class="formCadastro">
                 <label for="email">
                     email:
