mudancas no css e na tela de login

--- a/public/login.html
+++ b/public/login.html
@@ -17,7 +17,7 @@
         <nav id="navbar">
             <span id="logo">Hero Universe</span>
             <ul>
-                <li><a href="login.html" class="nav-link link-animation">Login</a></li>
+                <li><a href="cadastro.html" class="nav-link link-animation">Cadastro</a></li>
                 <li><a href="index.html" class="nav-link link-animation">Voltar</a></li>
             </ul>
         </nav>
