Icons de personagens adicionados

--- a/public/personagem.html
+++ b/public/personagem.html
@@ -12,10 +12,15 @@
     <title>Quiz Sobre Personagem</title>
 </head>
 
-<body onload="validarSessao()">
+<body>
     <header>
         <nav id="navbar">
-            <span id="logo">Hero Universe</span>
+            <div id="logo">
+                <img src="./assets/img/icons/avengers.svg" alt="">
+                <span>
+                    Hero Universe
+                </span>
+            </div>
             <ul>
                 <li>Olá, <span id="b_usuario"></span></li>
                 <li><a href="login.html" onclick="limparSessao()" class="nav-link link-animation">Sair</a></li>
