adicionando icones junto ao nome do usuario de acordo seu personagem favorito

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,12 @@
 <body>
     <header>
         <nav id="navbar">
-            <span id="logo">Hero Universe</span>
+            <div id="logo">
+                <img src="./assets/img/icons/avengers.svg" alt="">
+                <span>
+                    Hero Universe
+                </span>
+            </div>
             <ul>
                 <li><a href="#main-objetivo" class="nav-link link-animation">Objetivo</a></li>
                 <li><a href="#" class="nav-link link-animation">Noticias</a></li>
