--- a/public/login.html
+++ b/public/login.html
@@ -15,7 +15,12 @@
 <body>
     <header>
         <nav id="navbar">
-            <span id="logo">Hero Universe</span>
+            <div id="logo">
+                <img src="./assets/img/icons/avengers.svg" alt="">
+                <span class="logoi">
+                    Hero Universe
+                </span>
+            </div>
             <ul>
                 <li><a href="cadastro.html" class="nav-link link-animation">Cadastro</a></li>
                 <li><a href="index.html" class="nav-link link-animation">Voltar</a></li>
