--- a/public/personagem.html
+++ b/public/personagem.html
@@ -12,7 +12,7 @@
     <title>Quiz Sobre Personagem</title>
 </head>
 
-<body>
+<body onload="validarSessao()">
     <header>
         <nav id="navbar">
             <div id="logo">
@@ -22,24 +22,12 @@
                 </span>
             </div>
             <ul>
+                <li id="liperson"></li>
                 <li>Olá, <span id="b_usuario"></span></li>
                 <li><a href="login.html" onclick="limparSessao()" class="nav-link link-animation">Sair</a></li>
             </ul>
         </nav>
     </header>
-    <div class="container">
-        <div class="selectsPerso">
-            <select id="selectPersonagem">
-                <option value="SelecioneUmPersonagem" selected>Selecione um Personagem</option>
-                <option value="capitain_american">Capitão América</option>
-                <option value="iron_man">Homem de Ferro</option>
-                <option value="thor">Thor</option>
-                <option value="hulk">Hulk</option>
-                <option value="black_widow">Viúva Negra</option>
-                <option value="black_panther">Pantera Negra</option>
-            </select>
-            <button onclick="acharPersonagem()">Selecionar Personagem</button>
-        </div>
         <div class="containerPerso">
 
             <div class="container cardPersonagem">
