--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -15,7 +15,12 @@
 <body>
     <header>
         <nav id="navbar">
-            <span id="logo">Hero Universe</span>
+            <div id="logo">
+                <img src="./assets/img/icons/avengers.svg" alt="">
+                <span>
+                    Hero Universe
+                </span>
+            </div>
             <ul>
                 <li><a href="login.html" class="nav-link link-animation">Login</a></li>
                 <li><a href="index.html" class="nav-link link-animation">Voltar</a></li>
@@ -55,19 +60,23 @@
                 </label>
                 <div class="container">
                     <div class="selectsPerso">
-                        <select id="selectPersonagem">
+                        <select id="selectPersonagem" onchange="alterar()">
                             <option value="SelecioneUmPersonagem" selected>Selecione um Personagem</option>
-                            <option value="capitain_american">Capitão América</option>
-                            <option value="iron_man">Homem de Ferro</option>
+                            <option value="capitain-america" >Capitão América</option>
+                            <option value="iron-man">Homem de Ferro</option>
                             <option value="thor">Thor</option>
                             <option value="hulk">Hulk</option>
                             <option value="black_widow">Viúva Negra</option>
                             <option value="black_panther">Pantera Negra</option>
+                            <option value="spider">Homem Aranha</option>
                         </select>
                         <button onclick="acharPersonagem()" class="btnl">Selecionar Personagem</button>
+                        
                     </div>
                 </div>
                 <div id="mesagemCadastro">
+                </div>
+                <div id="divimagem">
                 </div>
                 <div id="divButton">
                     <button onclick="cadastrar()" class="btn">Cadastrar</button>
