Cadastro sem nenhum erro, imagem de personagem favorito adicionado, login e cadastro sendo efetuados no banco

--- a/public/afterlogin/personagem.html
+++ b/public/afterlogin/personagem.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
-    <script src="./script/script.js"></script>
+    <link rel="stylesheet" href="../style/style.css">
+    <script src="../script/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
 
     <title>Quiz Sobre Personagem</title>
@@ -16,20 +16,21 @@
     <header>
         <nav id="navbar">
             <div id="logo">
-                <img src="./assets/img/icons/avengers.svg" alt="">
+                <img src="../assets/img/icons/avengers.svg" alt="">
                 <span>
                     Hero Universe
                 </span>
             </div>
             <ul>
+                <li><a href="./quiz.html">Quiz</a></li>
                 <li id="liperson"></li>
                 <li>Olá, <span id="b_usuario"></span></li>
-                <li><a href="login.html" onclick="limparSessao()" class="nav-link link-animation">Sair</a></li>
+                <li><a href="../login.html" onclick="limparSessao()" class="nav-link link-animation">Sair</a></li>
             </ul>
         </nav>
     </header>
         <div class="containerPerso">
-
+            
             <div class="container cardPersonagem">
                 <div id="person">
                 </div>
