--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -66,12 +66,10 @@
                             <option value="iron-man">Homem de Ferro</option>
                             <option value="thor">Thor</option>
                             <option value="hulk">Hulk</option>
-                            <option value="black_widow">Viúva Negra</option>
-                            <option value="black_panther">Pantera Negra</option>
+                            <option value="black-widow">Viúva Negra</option>
+                            <option value="black-panther">Pantera Negra</option>
                             <option value="spider">Homem Aranha</option>
-                        </select>
-                        <button onclick="acharPersonagem()" class="btnl">Selecionar Personagem</button>
-                        
+                        </select>                        
                     </div>
                 </div>
                 <div id="mesagemCadastro">
