--- a/public/afterlogin/personagem.html
+++ b/public/afterlogin/personagem.html
@@ -22,6 +22,7 @@
                 </span>
             </div>
             <ul>
+                <li><a href="./dashboard.html">Desempenho</a></li>
                 <li><a href="./quiz.html">Quiz</a></li>
                 <li id="liperson"></li>
                 <li>Olá, <span id="b_usuario"></span></li>
@@ -30,7 +31,7 @@
         </nav>
     </header>
         <div class="containerPerso">
-            
+
             <div class="container cardPersonagem">
                 <div id="person">
                 </div>
@@ -38,12 +39,6 @@
             </div>
             <h1>Quiz Personagens da Marvel</h1>
             <form>
-                <h3>Pergunta 1:</h3>
-                <p>Qual o nome do super-herói conhecido como "Homem de Ferro"?</p>
-                <input type="radio" name="pergunta1" value="a"> a) Tony Stark<br>
-                <input type="radio" name="pergunta1" value="b"> b) Steve Rogers<br>
-                <input type="radio" name="pergunta1" value="c"> c) Bruce Banner<br>
-
                 <h3>Pergunta 2:</h3>
                 <p>Qual o nome do super-herói conhecido como "Homem-Aranha"?</p>
                 <input type="radio" name="pergunta2" value="a"> a) Peter Parker<br>
