--- a/public/afterlogin/quiz.html
+++ b/public/afterlogin/quiz.html
@@ -30,6 +30,14 @@
             </ul>
         </nav>
     </header>
+    <div class="container">
+        <div class="container telaquiz">
+            <div id="quiz">
+                Bem vindo ao Quiz sobre o personagem <span id="nomePersonagem"></span>
+                <button onclick="exibirPerguntas()" class="btn">Iniciar Quiz</button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
