Quiz dinamico já efetuado

--- a/public/afterlogin/quiz.html
+++ b/public/afterlogin/quiz.html
@@ -34,7 +34,7 @@
         <div class="container telaquiz">
             <div id="quiz">
                 Bem vindo ao Quiz sobre o personagem <span id="nomePersonagem"></span>
-                <button onclick="exibirPerguntas()" class="btn">Iniciar Quiz</button>
+                <button onclick="iniciar()" class="btn">Iniciar Quiz</button>
             </div>
         </div>
     </div>
