quiz capitão america funcionando

--- a/public/afterlogin/quiz.html
+++ b/public/afterlogin/quiz.html
@@ -32,7 +32,7 @@
     </header>
     <div class="container">
         <div class="container telaquiz">
-            <div id="quiz">
+            <div id="quiz" class="quiz">
                 Bem vindo ao Quiz sobre o personagem <span id="nomePersonagem"></span>
                 <button onclick="iniciar()" class="btn">Iniciar Quiz</button>
             </div>
