--- a/public/afterlogin/dashboard.html
+++ b/public/afterlogin/dashboard.html
@@ -22,8 +22,8 @@
                 </span>
             </div>
             <ul>
-                <li><a href="./personagem.html">Inicio</a></li>
-                <li><a href="./quiz.html">Quiz</a></li>
+                <li><a href="./personagem.html" class="nav-link link-animation">Inicio</a></li>
+                <li><a href="./quiz.html" class="nav-link link-animation">Quiz</a></li>
                 <li id="liperson"></li>
                 <li>Olá, <span id="b_usuario"></span></li>
                 <li><a href="../login.html" onclick="limparSessao()" class="nav-link link-animation">Sair</a></li>
