--- a/public/afterlogin/personagem.html
+++ b/public/afterlogin/personagem.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="../style/style.css">
     <script src="../script/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <title>Quiz Sobre Personagem</title>
+    <title>Infos Sobre Personagem</title>
 </head>
 
-<body onload="validarSessao()">
+<body onload="validarSessao1()">
     <header>
         <nav id="navbar">
             <div id="logo">
@@ -22,8 +23,8 @@
                 </span>
             </div>
             <ul>
-                <li><a href="./dashboard.html">Desempenho</a></li>
-                <li><a href="./quiz.html">Quiz</a></li>
+                <li><a href="./dashboard.html" class="nav-link link-animation">Desempenho</a></li>
+                <li><a href="./quiz.html" class="nav-link link-animation">Quiz</a></li>
                 <li id="liperson"></li>
                 <li>Olá, <span id="b_usuario"></span></li>
                 <li><a href="../login.html" onclick="limparSessao()" class="nav-link link-animation">Sair</a></li>
@@ -31,11 +32,6 @@
         </nav>
     </header>
     <div id="containerPerso">
-
-        <div class="container cardPersonagem">
-            <div id="person">
-
-        </div>
     </div>
 </body>
 
