--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#main-objetivo" class="nav-link link-animation">Objetivo</a></li>
                 <li><a href="#" class="nav-link link-animation">Noticias</a></li>
                 <li><a href="#main-sobre" class="nav-link link-animation">Sobre</a></li>
-                <li><a href="#main-sobre" class="nav-link link-animation">Portifolio</a></li>
+                <li><a href="#main-portifolio" class="nav-link link-animation">Portifolio</a></li>
                 <li><a href="cadastro.html" class="nav-link link-animation">Cadastro</a></li>
                 <li><a href="login.html" class="nav-link link-animation">Login</a></li>
             </ul>
@@ -30,7 +30,7 @@
     </header>
     <div class="vinheta-video">
         <video autoplay loop muted class="bg_video">
-            <source src="./assets/img/backgrounds/Marvel-Intro.mp4" type="video/mp4">
+            <!--<source src="./assets/img/backgrounds/Marvel-Intro.mp4" type="video/mp4">-->
             <div class="teia index">
                 <img src="./assets/img/icons/teia.svg" alt="" srcset="">
             </div>
@@ -43,27 +43,50 @@
         </span>
     </div>
 
-    <div class="div-opacity">
-        <section id="main-index">
-            <div class="main-index">
-                <div class="teia index">
-                    <img src="./assets/img/icons/teia.svg" alt="" srcset="">
-                </div>
+    <section id="main-objetivo">
+        <div class="text objetivo">
+            <span class="texto-Titulo">
+                <span class="texto-index">
+                    <a>
+                        Bem-vindo ao Hero Universe.<br>
+                        Fique sabendo tudo sobre o Universo da Marvel, desde os quadrinhos aos filmes da MCU.
+                    </a>
+                </span>
+                <a>
+                    hqifygwhebdsijcbyusiauhonxqubc
+                </a>
+            </span>
+            <div class="teia">
+                <img src="./assets/img/icons/teia.svg" alt="" srcset="">
             </div>
-        </section>
-        <main>
-            <section class="main-objetivo">
-                <div class="teia index">
-                    <img src="./assets/img/icons/teia.svg" alt="" srcset="">
-                </div>
-            </section>
-            <section class="main-sobre">
-                <div class="teia index">
-                    <img src="./assets/img/icons/teia.svg" alt="" srcset="">
-                </div>
-            </section>
-        </main>
-    </div>
+        </div>
+    </section>
+    <section id="main-sobre">
+        <div class="text sobre">
+            <span class="texto-Titulo">
+                <a>
+                    hqifygwhebdsijcbyusiauhonxqubc
+                </a>
+            </span>
+            <div class="teia">
+                <img src="./assets/img/icons/teia.svg" alt="" srcset="">
+            </div>
+        </div>
+    </section>
+    <section id="main-portifolio">
+        <div class="text portifolio">
+            <span class="texto-Titulo">
+                <a>
+                    hqifygwhebdsijcbyusiauhonxqubc
+                </a>
+            </span>
+            <div class="teia">
+                <img src="./assets/img/icons/teia.svg" alt="" srcset="">
+            </div>
+        </div>
+    </section>
+    
+
 </body>
 
 </html>
