--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
+    <script src="./script/script.js"></script>
     <title>Hero Universe</title>
 </head>
 
@@ -42,50 +43,64 @@
             </a>
         </span>
     </div>
-
-    <section id="main-objetivo">
-        <div class="text objetivo">
-            <span class="texto-Titulo">
-                <span class="texto-index">
+    <main>
+        <section id="main-objetivo">
+            <div class="container-objetivo">
+                <div class="titulo">
+                    <span class="texto-Titulo">
+                        <text class="titulo-main">
+                            Objetivo
+                        </text>
+                    </span>
+                </div>
+                <div class="saibaMais noticias">
+                    <span>
+                        <a class="TituloSaiba">Notícias e Atualizações:</a> Se mantenha atualizado sobre as últimas notícias e desenvolvimentos relacionados ao <a class="TituloSaiba">UCM</a>. Isso pode incluir anúncios de novos filmes, séries, elenco, datas de lançamento, trailers e informações de bastidores. Publique regularmente essas atualizações em seu site para manter os fãs informados sobre as novidades da Marvel.
+                    </span>
+                    <button onclick="redirect()" id="noticias" class="bottao">Saiba Mais</button>
+                </div>
+                <div class="saibaMais portifolio">
+                    <span>
+                        <a class="TituloSaiba">Portifólio:</a> Este site também tem o intuito de ser utilizado como portifólio do que eu adquiri de competência de programação. Tenho um amor por todos os filmes da <a class="TituloSaiba">UCM</a> sendo o primeiro filme que assiti foi o <a class="TituloSaiba">Homem de Ferro</a>.
+                    </span>
+                    <button onclick="redirect()" id="portifolio" class="bottao">Saiba Mais</button>
+                </div>
+                <div class="saibaMais portifolio">
+                    <span>
+                        <a class="TituloSaiba">Sobre Mim:</a> Assim como o portifólio, este site vai dizer um pouco sobre mim e do que eu gosto de fazer nas minhas horas vagas. Basicamente tudo que eu gosto vai acabar sendo mencionado aqui neste site.
+                    </span>
+                    <button onclick="redirect()" id="sobremim" class="bottao">Saiba Mais</button>
+                </div>
+            </div>
+        </section>
+        <section id="main-sobre">
+            <div class="container-sobre">
+                <div class="conteudo">
+                    <span class="texto-Titulo">
+                        <text>
+                            Objetivo
+                        </text>
+                    </span>
+                    <span class="texto-index">
+                        <a>
+                            Bem-vindo ao Hero Universe.<br>
+                            Fique sabendo tudo sobre o Universo da Marvel, desde os quadrinhos aos filmes da MCU.
+                        </a>
+                    </span>
+                </div>
+            </div>
+        </section>
+        <section id="main-portifolio">
+            <div class="text portifolio">
+                <span class="texto-Titulo">
                     <a>
-                        Bem-vindo ao Hero Universe.<br>
-                        Fique sabendo tudo sobre o Universo da Marvel, desde os quadrinhos aos filmes da MCU.
+                        hqifygwhebdsijcbyusiauhonxqubc
                     </a>
                 </span>
-                <a>
-                    hqifygwhebdsijcbyusiauhonxqubc
-                </a>
-            </span>
-            <div class="teia">
-                <img src="./assets/img/icons/teia.svg" alt="" srcset="">
             </div>
-        </div>
-    </section>
-    <section id="main-sobre">
-        <div class="text sobre">
-            <span class="texto-Titulo">
-                <a>
-                    hqifygwhebdsijcbyusiauhonxqubc
-                </a>
-            </span>
-            <div class="teia">
-                <img src="./assets/img/icons/teia.svg" alt="" srcset="">
-            </div>
-        </div>
-    </section>
-    <section id="main-portifolio">
-        <div class="text portifolio">
-            <span class="texto-Titulo">
-                <a>
-                    hqifygwhebdsijcbyusiauhonxqubc
-                </a>
-            </span>
-            <div class="teia">
-                <img src="./assets/img/icons/teia.svg" alt="" srcset="">
-            </div>
-        </div>
-    </section>
-    
+        </section>
+    </main>
+
 
 </body>
 
